<resources>
    <string name="app_name">Quiz App</string>
    <string name="delete_game">Delete Game</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="icon">ICON:</string>
    <string name="topics"><u>TOPICS:</u></string>
    <string name="difficulty"><u>DIFFICULTY:</u></string>
    <string name="start">START</string>
    <string name="cloud">Cloud</string>
    <string name="local">Local</string>
    <string name="last_played">Last played:</string>
    <string name="top_player">Top player:</string>
    <string name="create_game">Create game</string>
    <string name="create">create</string>
    <string name="select_icon">Select icon:</string>
    <string name="select_categories">Select categories:</string>
    <string name="select_category2">Select second category:</string>
    <string name="select_game_difficulty">Select game difficulty:</string>
    <string name="todo">TODO</string>
    <string name="than"> , than  </string>
    <string name="first_should_answer">First should answer  </string>
    <string name="next_question_in">Next question in:</string>
    <string name="proceed">proceed</string>
    <string name="now_answers">Now answers:</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="players">PLAYERS</string>
    <string name="add_up_to_four_players">Add up to four players:</string>
    <string name="avatar">Avatar</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="name">NAME</string>
    <string name="enter_your_name_here">Enter your name here</string>
    <string name="history"><u>HISTORY</u></string>
    <string name="games"><u>GAMES</u></string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="pass">PASS</string>
</resources>