<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/pc_light_gray">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:textColor="@color/pc_dark_gray"
            android:textSize="16sp"
            android:id="@+id/txtInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_should_answer" />

        <TextView
            android:textColor="@color/pc_dark_gray"
            android:textSize="16sp"
            android:id="@+id/txtFirstPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1" />

        <TextView
            android:textColor="@color/pc_dark_gray"
            android:textSize="16sp"
            android:id="@+id/txtSecondInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/than" />

        <TextView
            android:textColor="@color/pc_dark_gray"
            android:textSize="16sp"
            android:id="@+id/txtSecondPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtQuestionField"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:background="@color/pc_medium_gray"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat8"
        app:layout_goneMarginTop="40dp" />

    <TextView
        android:layout_marginBottom="20dp"
        android:id="@+id/txtGenerateQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintBottom_toTopOf="@+id/txtGenerateQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionField"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtCorrectAnswer"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/pc_medium_gray"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtAnswOption2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionField" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtAnswOption2"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pc_medium_gray"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionField" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtAnswOption3"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:background="@color/pc_medium_gray"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtAnswOption4"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorrectAnswer"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:textSize="20sp"
        android:id="@+id/txtAnswOption4"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pc_medium_gray"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/txtGenerateQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAnswOption2"
        app:layout_constraintVertical_bias="0.159" />

</androidx.constraintlayout.widget.ConstraintLayout>