<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pc_light_gray">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarGameTab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pc_dark_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:titleTextColor="@color/pc_light_gray" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarGameTab">

        <TextView
            android:id="@+id/txtIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/icon"
            android:textSize="@dimen/text_medium"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="128dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIcon"
            android:layout_width="72dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_game_base" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txtTopics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

        <TextView
            android:id="@+id/txtAnswerOption4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/difficulty"
            android:textSize="@dimen/text_medium"
            tools:ignore="RtlSymmetry"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="128dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:src="@drawable/ic_star"
            android:id="@+id/imgDifficultyEasy"
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="invisible"
            android:src="@drawable/ic_star"
            android:id="@+id/imgDifficultyMedium"
            android:layout_width="24dp"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="invisible"
            android:src="@drawable/ic_star"
            android:id="@+id/imgDifficultyHard"
            android:layout_width="24dp"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/txtTopics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/padding_medium"
        android:textSize="@dimen/text_medium"
        android:text="@string/topics"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat2"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

        <TextView
            android:id="@+id/txtCategory2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_medium"
            android:textSize="@dimen/text_medium"
            tools:ignore="RtlSymmetry" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTopics">

        <TextView
            android:id="@+id/txtCategory1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/padding_medium"
            android:textSize="@dimen/text_medium"
            tools:ignore="RtlSymmetry" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat4">

        <TextView
            android:paddingStart="@dimen/padding_medium"
            android:textSize="@dimen/text_medium"
            android:text="@string/last_played"
            android:id="@+id/txtLastPlayed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtLastPlayedInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat6">

        <TextView
            android:id="@+id/txtTopPlayer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="@dimen/padding_medium"
            android:text="@string/top_player"
            android:textSize="@dimen/text_medium"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txtTopPlayerInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat5">

        <TextView
            android:id="@+id/txtCloud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="12dp"
            android:text="@string/cloud"
            android:textAlignment="textEnd"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtLocal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="12dp"
            android:text="@string/local"
            android:textAlignment="textStart"
            tools:ignore="RtlSymmetry" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnCreateGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="252dp" />


</androidx.constraintlayout.widget.ConstraintLayout>