<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/pc_light_gray">

    <TextView
        android:text="sssdasdadasd"
        android:id="@+id/txtQuestionField"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="20dp"
        android:layout_marginTop="84dp"
        android:background="@color/pc_dark_gray"
        android:textColor="@color/pc_light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstPlayer"
        app:layout_goneMarginTop="40dp" />

    <TextView
        android:id="@+id/txtAnswerOption2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pc_dark_gray"
        android:padding="20dp"
        android:text="asdasdasdasdasd"
        android:textAlignment="center"
        android:textColor="@color/pc_light_gray"
        app:layout_constraintBottom_toTopOf="@+id/txtAnswerOption3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstPlayer"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:text="@string/no"
        android:id="@+id/txtAnswerOption3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pc_dark_gray"
        android:padding="20dp"
        android:textColor="@color/pc_light_gray"
        app:layout_constraintBottom_toTopOf="@+id/txtAnswerOption4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstPlayer"
        app:layout_constraintVertical_bias="0.927" />

    <TextView
        android:id="@+id/txtAnswerOption4"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@color/pc_dark_gray"
        android:padding="20dp"
        android:text="PASS"
        android:textColor="@color/pc_light_gray"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerateQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstPlayer"
        app:layout_constraintVertical_bias="0.76" />

    <TextView
        android:layout_marginBottom="20dp"
        android:id="@+id/btnGenerateQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_question_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/now_answers"
        app:layout_constraintBottom_toTopOf="@+id/txtQuestionField"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtFirstPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/txtInfo"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        app:layout_constraintTop_toBottomOf="@+id/txtQuestionField"
        tools:layout_editor_absoluteX="-16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>